--- a/Views/Product/Edit.cshtml
+++ b/Views/Product/Edit.cshtml
@@ -69,7 +69,7 @@
 
             <div class="row mb-3">
                 <div class="offset-sm-4 col-sm-8">
-                    <img src="/images/@ViewData["ImageFileName"]" width="150" />
+                    <img src="/images/@ViewData["ImageFileName"]" width="150">
                 </div>
                 <div
             </div>
@@ -87,7 +87,7 @@
                     <div class="row mb-3">
                         <label class="col-sm-4 col-form-label">CreatedAt</label>
                         <div class="col-sm-8">
-                        <input class="form-control-plaintext" readonly value="@ViewData["CreatedAt"]" />
+                        <input class="form-control-plaintext" readonly value="@ViewData["CreatedAt"]">
 
                         </div>
                     </div>
